refactor: JDK 20 deprecates URL Public Constructors